--- a/labs-ios-starter/Map Screen/MapDashboard.storyboard
+++ b/labs-ios-starter/Map Screen/MapDashboard.storyboard
@@ -211,7 +211,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="2cD-HK-Fkk">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CityCell" id="2cD-HK-Fkk">
                                         <rect key="frame" x="0.0" y="4.5" width="150" height="151"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="PMZ-yB-7P8">
@@ -230,9 +230,6 @@
                                                     <accessibility key="accessibilityConfiguration" identifier="favoritesButton"/>
                                                     <state key="normal" image="favoriteButton"/>
                                                     <state key="selected" image="favoriteButton"/>
-                                                    <connections>
-                                                        <action selector="favoriteButtonPressed:" destination="2RW-rT-vz6" eventType="touchUpInside" id="NHa-Pw-jbK"/>
-                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
@@ -298,7 +295,6 @@
                         <outlet property="averageIncomeLabel" destination="Rqj-rJ-2vT" id="4HL-Cd-K3e"/>
                         <outlet property="cityNameLabel" destination="Jl8-2k-XvH" id="Tgl-Jg-ZC1"/>
                         <outlet property="employmentLabel" destination="Z3I-O0-Jve" id="8QN-JN-WNb"/>
-                        <outlet property="favoriteButton" destination="aOY-yt-gpM" id="m9H-On-0gu"/>
                         <outlet property="livabilityLabel" destination="Hc0-HK-WB6" id="QR1-4M-2hC"/>
                         <outlet property="rentalLabel" destination="Qqf-vy-Mid" id="AWd-lu-xou"/>
                         <outlet property="searchButton" destination="szD-od-WaM" id="RWZ-jq-0KK"/>
